docs(Storybook): z-index issue fixed (#48042)

--- a/.storybook/storybook.scss
+++ b/.storybook/storybook.scss
@@ -100,6 +100,20 @@
   //margin-left: calc((-100vw - 100%) / 2);
 }
 
+/*.sticky-preview {
+  position: relative;
+  z-index: 1;
+}*/
+
+.sbdocs-preview {
+  > div:nth-child(2) {
+    > div:nth-child(1) {
+      position: relative;
+      z-index: 1000;
+    }
+  }
+}
+
 /*
 .sticky-preview-wrapper {
   display: flex;
@@ -115,6 +129,8 @@
     }
   }
 }
+
+
 
 .sticky-preview {
   > div {
